--- a/혼자 공부하는 자바스크립트/js-basic-new/03/age.html
+++ b/혼자 공부하는 자바스크립트/js-basic-new/03/age.html
@@ -11,5 +11,17 @@
 	<button class="btn" onclick="calc()">나이 계산하기</button>
 	<div id="result" class="show">(결과 값 표시)</div>
 
+<script>
+	function calc() {
+		var currentYear = 2025;
+		var birthYear = prompt("태어난 연도를 입력하세요.","YYYY");
+		var age;
+
+		age = currentYear - birthYear + 1;
+		document.querySelector("#result").innerHTML = "당신의 나이는 " + age + "세입니다.";
+		document.write("<span class='num'>", 2018, "</span>");
+
+	}
+</script>
 </body>
 </html>
